all review comments added

--- a/examples/Getting_Started/Getting-started-with-Merlin-Systems.ipynb
+++ b/examples/Getting_Started/Getting-started-with-Merlin-Systems.ipynb
@@ -34,11 +34,11 @@
     "\n",
     "## Overview\n",
     "\n",
-    "NVIDIA Merlin is an open source framework that accelerates and scales end-to-end recommender system pipelines on GPU. The Merlin framework is broken up into several sub components, these include: merlin-core, merlin-models, nvtabular and merlin-systems. Merlin Systems will be the focus of this example.\n",
+    "NVIDIA Merlin is an open source framework that accelerates and scales end-to-end recommender system pipelines on GPU. The Merlin framework is broken up into several sub components, these include: merlin-core, merlin-models, NVTabular and merlin-systems. Merlin Systems will be the focus of this example.\n",
     "\n",
-    "The purpose of the Merlin Systems library is to make it easy for merlin users to quickly deploy their recommender systems from development to triton. We extended the same user-friendly API users are accustomed to in NVTabular and leveraged it to accommodate deploying your recommender system components to triton. \n",
+    "The purpose of the Merlin Systems library is to make it easy for Merlin users to quickly deploy their recommender systems from development to triton. We extended the same user-friendly API users are accustomed to in NVTabular and leveraged it to accommodate deploying your recommender system components to triton. \n",
     "\n",
-    "There are some things we need ensure before we continue with this Notebook. Please ensure you have a working workflow and model stored in an accessible location. As previously mentioned, Merlin Systems will take the data preprocessing workflow defined in nvtabular and load that into triton as a model. Subsequently it will do the same for the trained model. Lets take a closer look in the rest of this notebook at how merlin systems makes deploying to tritonserver simple and effortless.\n",
+    "There are some things we need ensure before we continue with this Notebook. Please ensure you have a working workflow and model stored in an accessible location. As previously mentioned, Merlin Systems will take the data preprocessing workflow defined in NVTabular and load that into triton as a model. Subsequently it will do the same for the trained model. Lets take a closer look in the rest of this notebook at how Merlin systems makes deploying to tritonserver simple and effortless.\n",
     "\n",
     "\n",
     "**Be sure to check the other components of the Merlin framework, they can help you **\n",
@@ -69,9 +69,9 @@
    "id": "222fde5f",
    "metadata": {},
    "source": [
-    "## Load Workflow\n",
+    "## Load an NVTabular Workflow\n",
     "\n",
-    "First, we load the `nvtabular.Workflow` created in with this [example](https://github.com/NVIDIA-Merlin/models/blob/main/examples/04-Retrieval-Model.ipynb). "
+    "First, we load the `nvtabular.Workflow` that we created in with this [example](https://github.com/NVIDIA-Merlin/models/blob/main/examples/04-Retrieval-Model.ipynb). "
    ]
   },
   {
@@ -113,7 +113,7 @@
    "id": "746fba56-36af-44a3-8beb-34ca026648be",
    "metadata": {},
    "source": [
-    "After we have loaded the workflow, we remove the label columns from it's inputs. This removes all columns with the `TARGET` tag from the workflow. We do this because we need to set the workflow to only  require the features needed to predict, not train, when creating an inference pipeline."
+    "After we load the workflow, we remove the label columns from it's inputs. This removes all columns with the `TARGET` tag from the workflow. We do this because we need to set the workflow to only  require the features needed to predict, not train, when creating an inference pipeline."
    ]
   },
   {
@@ -145,7 +145,7 @@
    "id": "143795f2",
    "metadata": {},
    "source": [
-    "## Load Model\n",
+    "## Load a Tensorflow Model\n",
     "\n",
     "After loading the workflow, we load the model. This model was trained with the output of the workflow from this [example](https://github.com/NVIDIA-Merlin/models/blob/main/examples/04-Retrieval-Model.ipynb)."
    ]
@@ -299,7 +299,7 @@
     "\n",
     "Once the ensemble export has completed successfully, we can check the export path for the graph's artifacts. You should see a file structure that represents a ordering number followed by an operator identifier(i.e. `1_transformworkflow`, `2_predicttensorflow`). \n",
     "\n",
-    "Inside each of those folders, there should be a config.pbtxt and a folder with a number, representing a version, usually 1. The artifacts for the given operator are found inside the version folder. These artifacts vary depending on the operator in question. \n",
+    "Inside each of those directories, the `export` method writes a `config.pbtxt` file and a directory with a number. The number indicates the version and begins at 1. The artifacts for each operator are found inside the version folder. These artifacts vary depending on the operator in question. \n",
     "\n",
     "Please see the snapshot below for verification."
    ]
@@ -324,11 +324,11 @@
    "source": [
     "## Starting Triton Server\n",
     "\n",
-    "After we have exported the ensemble, we are ready to start the triton server. First ensure it is installed in your environment otherwise find more install information here[link to triton build and install documentation]. Once installation is verified, you can start triton server by using the following command:\n",
+    "After we export the ensemble, we are ready to start the Triton Inference Server. First ensure it is installed in your environment otherwise find more install information here[link to triton build and install documentation]. Once installation is verified, you can start triton server by using the following command:\n",
     "\n",
     "`tritonserver --model-repository=/ensemble_export_path/`\n",
     "\n",
-    "The export path should be the same as used above duirng ensemble export."
+    "For the `--model-repository` argument, specify the same value as the `export_path` that you specified previously in the `ensemble.export` method."
    ]
   },
   {
@@ -336,7 +336,7 @@
    "id": "c75e2eb9",
    "metadata": {},
    "source": [
-    "## Sending a request to Triton\n",
+    "## Retrieving Recommendations from Triton\n",
     "\n",
     "Now that our tritonserver instance is running, we can send a request to it. This request is composed of values that correspond to the request schema created when exporting the ensemble graph.\n",
     "\n",
