--- a/examples/Getting_Started/Serving-Ranking-Models-With-Merlin-Systems.ipynb
+++ b/examples/Getting_Started/Serving-Ranking-Models-With-Merlin-Systems.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "<img src=\"http://developer.download.nvidia.com/compute/machine-learning/frameworks/nvidia_logo.png\" style=\"width: 90px; float: right;\">\n",
     "\n",
-    "# Merlin Systems: From Models to Serving Recommendations\n",
+    "# Serving Ranking Models With Merlin Systems\n",
     "\n",
     "## Overview\n",
     "\n",
