--- a/examples/Getting_Started/Serving-Ranking-Models-With-Merlin-Systems.ipynb
+++ b/examples/Getting_Started/Serving-Ranking-Models-With-Merlin-Systems.ipynb
@@ -36,17 +36,17 @@
     "\n",
     "NVIDIA Merlin is an open source framework that accelerates and scales end-to-end recommender system pipelines. The Merlin framework is broken up into several sub components, these include: Merlin-Core, Merlin-Models, NVTabular and Merlin-Systems. Merlin Systems will be the focus of this example.\n",
     "\n",
-    "The purpose of the Merlin Systems library is to make it easy for Merlin users to quickly deploy their recommender systems from development to triton. We extended the same user-friendly API users are accustomed to in NVTabular and leveraged it to accommodate deploying your recommender system components to triton. \n",
+    "The purpose of the Merlin Systems library is to make it easy for Merlin users to quickly deploy their recommender systems from development to [Triton Inference Server](https://github.com/triton-inference-server/server). We extended the same user-friendly API users are accustomed to in NVTabular and leveraged it to accommodate deploying your recommender system components to Triton. \n",
     "\n",
-    "There are some things we need ensure before we continue with this Notebook. Please ensure you have a working workflow and model stored in an accessible location. As previously mentioned, Merlin Systems will take the data preprocessing workflow defined in NVTabular and load that into triton as a model. Subsequently it will do the same for the trained model. Lets take a closer look in the rest of this notebook at how Merlin systems makes deploying to tritonserver simple and effortless.\n",
+    "There are some things we need ensure before we continue with this Notebook. Please ensure you have a working workflow and model stored in an accessible location. As previously mentioned, Merlin Systems will take the data preprocessing workflow defined in NVTabular and load that into Triton as a model. Subsequently it will do the same for the trained model. Lets take a closer look in the rest of this notebook at how Merlin systems makes deploying to Triton simple and effortless.\n",
     "\n",
     "\n",
     "**Be sure to check the other components of the Merlin framework, they can help you **\n",
     "\n",
     "### Learning objectives\n",
     "\n",
-    "In this notebook, we learn how to deploy a NVTabular Workflow and a trained model from Merlin Models to tritonserver.\n",
-    "- Load NVtabular Workflow\n",
+    "In this notebook, we learn how to deploy a NVTabular Workflow and a trained Tensorflow model from Merlin Models to Triton.\n",
+    "- Load NVTabular Workflow\n",
     "- Load Pre-trained Merlin Models model\n",
     "- Create Ensemble Graph\n",
     "- Export Ensemble Graph\n",
@@ -61,7 +61,8 @@
     "\n",
     "- NVTabular\n",
     "- Merlin Models\n",
-    "- Merlin Systems"
+    "- Merlin Systems\n",
+    "- Triton Inference Server"
    ]
   },
   {
