update example and test

--- a/examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
+++ b/examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
@@ -230,8 +230,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "export_path = 'ensemble'\n",
+    "\n",
     "ensemble = Ensemble(inf_ops, inf_schema)\n",
-    "ensemble.export('ensemble');"
+    "ensemble.export(export_path);"
    ]
   },
   {
