switch to using `without` for modifying schema

--- a/examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
+++ b/examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0a2d3208",
    "metadata": {},
    "outputs": [
@@ -90,15 +90,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-08-05 10:30:58.165261: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-05 10:30:58.165742: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-05 10:30:58.165879: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-08-05 14:27:44.797751: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-08-05 14:27:44.798226: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-08-05 14:27:44.798359: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "downloading ml-100k.zip: 4.94MB [00:03, 1.34MB/s]                                                                                                                                                                                                                                                                                                                                         \n",
+      "unzipping files: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 24/24 [00:00<00:00, 252.91files/s]\n",
+      "INFO:merlin.datasets.entertainment.movielens.dataset:starting ETL..\n",
       "/usr/local/lib/python3.8/dist-packages/cudf/core/frame.py:384: UserWarning: The deep parameter is ignored and is only included for pandas compatibility.\n",
       "  warnings.warn(\n",
-      "2022-08-05 10:31:00,096 - distributed.diskutils - INFO - Found stale lock file and directory '/models/dask-worker-space/worker-zhjdex7g', purging\n",
-      "2022-08-05 10:31:00,096 - distributed.diskutils - INFO - Found stale lock file and directory '/models/dask-worker-space/worker-d1sa1_qo', purging\n",
-      "2022-08-05 10:31:00,096 - distributed.preloading - INFO - Import preload module: dask_cuda.initialize\n",
-      "[10:31:01] task [xgboost.dask]:tcp://127.0.0.1:41605 got new rank 0\n"
+      "2022-08-05 14:27:54,502 - distributed.diskutils - INFO - Found stale lock file and directory '/workspace/examples/dask-worker-space/worker-tuf69elw', purging\n",
+      "2022-08-05 14:27:54,502 - distributed.diskutils - INFO - Found stale lock file and directory '/workspace/examples/dask-worker-space/worker-aqxr74h8', purging\n",
+      "2022-08-05 14:27:54,502 - distributed.diskutils - INFO - Found stale lock file and directory '/workspace/examples/dask-worker-space/worker-p3sht1ls', purging\n",
+      "2022-08-05 14:27:54,503 - distributed.preloading - INFO - Import preload module: dask_cuda.initialize\n",
+      "[14:27:56] task [xgboost.dask]:tcp://127.0.0.1:41073 got new rank 0\n"
      ]
     },
     {
@@ -128,7 +132,7 @@
     "preprocess_categories = ['movieId', 'userId', 'genres'] >> nvt.ops.Categorify(freq_threshold=2, dtype=np.int32)\n",
     "preprocess_rating = ['rating'] >> nvt.ops.AddTags(tags=[Tags.TARGET, Tags.REGRESSION])\n",
     "\n",
-    "train_workflow = nvt.Workflow(preprocess_categories + preprocess_rating + train.schema.remove_col('rating_binary').remove_col('title').column_names)\n",
+    "train_workflow = nvt.Workflow(preprocess_categories + preprocess_rating + train.schema.without(['rating_binary', 'title']).column_names)\n",
     "train_transformed = train_workflow.fit_transform(train)\n",
     "\n",
     "with Distributed():\n",
@@ -166,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fa8dc34a",
    "metadata": {},
    "outputs": [],
@@ -188,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "de9e2237",
    "metadata": {},
    "outputs": [],
@@ -211,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e23a7fc3",
    "metadata": {},
    "outputs": [],
@@ -270,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2d61751b",
    "metadata": {},
    "outputs": [
@@ -302,7 +306,10 @@
        "      <th>userId_count</th>\n",
        "      <th>gender</th>\n",
        "      <th>zip_code</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>rating_binary</th>\n",
        "      <th>age</th>\n",
+       "      <th>title</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -315,7 +322,10 @@
        "      <td>5.572154</td>\n",
        "      <td>1</td>\n",
        "      <td>77</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -326,7 +336,10 @@
        "      <td>5.572154</td>\n",
        "      <td>1</td>\n",
        "      <td>77</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>GoldenEye (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -337,7 +350,10 @@
        "      <td>5.572154</td>\n",
        "      <td>1</td>\n",
        "      <td>77</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Four Rooms (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -348,7 +364,10 @@
        "      <td>5.572154</td>\n",
        "      <td>1</td>\n",
        "      <td>77</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>Get Shorty (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -359,7 +378,10 @@
        "      <td>5.572154</td>\n",
        "      <td>1</td>\n",
        "      <td>77</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>Copycat (1995)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -373,21 +395,21 @@
        "3       96      77      89          -0.093809      5.572154       1        77   \n",
        "4      383      77      25          -0.539376      5.572154       1        77   \n",
        "\n",
-       "   age  \n",
-       "0    1  \n",
-       "1    1  \n",
-       "2    1  \n",
-       "3    1  \n",
-       "4    1  "
+       "   rating  rating_binary  age              title  \n",
+       "0       5              1    1   Toy Story (1995)  \n",
+       "1       3              0    1   GoldenEye (1995)  \n",
+       "2       4              1    1  Four Rooms (1995)  \n",
+       "3       3              0    1  Get Shorty (1995)  \n",
+       "4       3              0    1     Copycat (1995)  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ten_examples = train.compute().drop(columns=['rating', 'rating_binary', 'title'])[:10]\n",
+    "ten_examples = train.compute()\n",
     "ten_examples.head()"
    ]
   },
@@ -401,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2fefd5b8",
    "metadata": {},
    "outputs": [],
@@ -431,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6ddd35cc",
    "metadata": {},
    "outputs": [],
@@ -441,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6f28fdfe",
    "metadata": {},
    "outputs": [
@@ -451,9 +473,9 @@
      "text": [
       "/usr/local/lib/python3.8/dist-packages/distributed/node.py:180: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 44359 instead\n",
+      "Hosting the HTTP server on port 36473 instead\n",
       "  warnings.warn(\n",
-      "2022-08-05 10:31:03,946 - distributed.preloading - INFO - Import preload module: dask_cuda.initialize\n"
+      "2022-08-05 14:29:30,435 - distributed.preloading - INFO - Import preload module: dask_cuda.initialize\n"
      ]
     }
    ],
@@ -464,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e946de27",
    "metadata": {},
    "outputs": [],
